@@ -46,72 +46,6 @@ typedef libuna_utf8_character_t libsmraw_character_t;
 #define _LIBSMRAW_STRING( string ) \
 	(libsmraw_character_t *) string
 
-#define libsmraw_string_compare( string1, string2, size ) \
-	narrow_string_compare( (char *) string1, (char *) string2, size )
-
-#define libsmraw_string_copy( destination, source, size ) \
-	narrow_string_copy( (char *) destination, (char *) source, size )
-
-#define libsmraw_string_length( string ) \
-	narrow_string_length( (char *) string )
-
-#define libsmraw_string_search( string, character, size ) \
-	(libsmraw_character_t *) narrow_string_search( (char *) string, (int) character, size )
-
-#define libsmraw_string_search_reverse( string, character, size ) \
-	(libsmraw_character_t *) narrow_string_search_reverse( (char *) string, (int) character, size )
-
-#define libsmraw_string_snprintf( target, size, format, ... ) \
-	narrow_string_snprintf( (char *) target, size, format, __VA_ARGS__ )
-
-#define libsmraw_string_to_int64( string, end_of_string, base ) \
-	narrow_string_to_signed_long_long( (char *) string, (char **) end_of_string, base )
-
-#define libsmraw_string_to_uint64( string, end_of_string, base ) \
-	narrow_string_to_unsigned_long_long( (char *) string, (char **) end_of_string, base )
-
-/* Byte stream functions
- */
-#define libsmraw_string_size_from_byte_stream( stream, stream_size, codepage, string_size, error ) \
-	libuna_utf8_string_size_from_byte_stream( stream, stream_size, codepage, string_size, error )
-
-#define libsmraw_string_copy_from_byte_stream( string, string_size, stream, stream_size, codepage, error ) \
-	libuna_utf8_string_copy_from_byte_stream( string, string_size, stream, stream_size, codepage, error )
-
-#define byte_stream_size_from_libsmraw_string( string, string_size, codepage, stream_size, error ) \
-	libuna_byte_stream_size_from_utf8( string, string_size, codepage, stream_size, error )
-
-#define byte_stream_copy_from_libsmraw_string( stream, stream_size, codepage, string, string_size, error ) \
-	libuna_byte_stream_copy_from_utf8( stream, stream_size, codepage, string, string_size, error )
-
-/* UTF-8 stream functions
- */
-#define libsmraw_string_size_from_utf8_stream( stream, stream_size, string_size, error ) \
-	libuna_utf8_string_size_from_utf8_stream( stream, stream_size, string_size, error )
-
-#define libsmraw_string_copy_from_utf8_stream( string, string_size, stream, stream_size, error ) \
-	libuna_utf8_string_copy_from_utf8_stream( string, string_size, stream, stream_size, error )
-
-#define utf8_stream_size_from_libsmraw_string( string, string_size, stream_size, error ) \
-	libuna_utf8_stream_size_from_utf8( string, string_size, stream_size, error )
-
-#define utf8_stream_copy_from_libsmraw_string( stream, stream_size, string, string_size, error ) \
-	libuna_utf8_stream_copy_from_utf8( stream, stream_size, string, string_size, error )
-
-/* UTF-16 stream functions
- */
-#define libsmraw_string_size_from_utf16_stream( stream, stream_size, byte_order, string_size, error ) \
-	libuna_utf8_string_size_from_utf16_stream( stream, stream_size, byte_order, string_size, error )
-
-#define libsmraw_string_copy_from_utf16_stream( string, string_size, stream, stream_size, byte_order, error ) \
-	libuna_utf8_string_copy_from_utf16_stream( string, string_size, stream, stream_size, byte_order, error )
-
-#define utf16_stream_size_from_libsmraw_string( string, string_size, stream_size, error ) \
-	libuna_utf16_stream_size_from_utf8( string, string_size, stream_size, error )
-
-#define utf16_stream_copy_from_libsmraw_string( stream, stream_size, byte_order, string, string_size, error ) \
-	libuna_utf16_stream_copy_from_utf8( stream, stream_size, byte_order, string, string_size, error )
-
 #if defined( _cplusplus )
 }
 #endif
